
2020-12-16  Ron Norman <rjn@inglenet.com>
	* common.h: Changes to handle VBISAM in CISAM mode
	* common.c: Changes to report using VBISAM in CISAM mode
	* fileio.c: Changes to handle "format=vbcisam"
			    and to load libcobvc.so at startup
	* fisam.c: Changes for building with VBISAM in CISAM mode
	* Makefile.am: Changes for configure/build of VBISAM in CISAM mode
				
2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	Bug #692 missing output for DISPLAY WITH NO ADVANCING
	* termio.c (cob_accept): always flush to ensure buffered output is seen

2020-12-14  Ron Norman <rjn@inglenet.com>

	* fodbc.c: fixed problem with 'commit' not being done
	* fsqlxfd.c: speed up copy of PIC X fields instead of using cob_move

2020-12-09  Ron Norman <rjn@inglenet.com>

	* common.c: If the system supports sigaction then codegen.c emits
	  code to catch an abort while dumping and recover
	  the routine cob_set_dump_signal sets up the signal processing;
	  Added cob_get_sig_name and cob_get_sig_description;
	  Rewrote cob_set_signal to be table driven

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, intrinsic.c: removed unused include sys/timeb.h and definitions
	  for timeb and ftime
	* termio.c (setup_lvlwrk_and_dump_null_adrs): handle level 0 as INDEX

2020-12-04  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_open): honor cob_unix_lf for pipes (binary mode,
	  especially for WIN32)
	* fileio.c (cob_file_close)[_MSC_VER]: fixed crash on close - at least for
	  this compiler a file close also closes the attached file-stream

2020-11-30  Ron Norman <rjn@inglenet.com>

	* common.c (cob_check_version): rewrote as it did not work on some platforms

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>
